<resources>
    <string name="app_name">FirebaseChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_account_string">Create Account</string>
    <string name="name_string">Name</string>
    <string name="username_string">Username</string>
    <string name="email_string">Email Address</string>
    <string name="password_string">Password</string>
    <string name="account_yes_string">Already have an account?</string>
    <string name="account_no_string">Not yet registered?</string>
    <string name="login_string">Login</string>
    <string name="forgot_password_string">Forgot Password?</string>
    <string name="send">Send</string>

    <string name="about_us_header">ABOUT US</string>
    <string name="team_one_header">TEAM ONE</string>

    <string name="name1">Jose Lou (Notsky)</string>
    <string name="name2">Mattia Contestabile</string>
    <string name="name3">Ameya Gidh</string>
    <string name="name4">Karan Shah</string>
    <string name="name5">Yixuan Zhang (Monica)</string>
    <string name="name6">Benjamin Tisdale (Lucian)</string>

</resources>